# GJU_Library

./: .gitignore  001 Ziner Diode Project.md  2.xlsx  Electronics proj (1).docx  HydroLoop.docx  Zener_Diode_Project_Report.md  edit_electronics_proj.py  make_report_docx.py  package-lock.json
code/hydroloop/backend/: Dockerfile  pyproject.toml
code/hydroloop/backend/api/: deps.py  main.py  routes_devices.py  routes_health.py  routes_stream.py  routes_summary.py  time_bucket.py
code/hydroloop/backend/ingest/: db.py  main.py  mock.py  pubsub.py  schemas.py
code/hydroloop/backend/scripts/: backfill_demo.py
code/hydroloop/backend/tests/: conftest.py  test_db.py  test_ingest.py  test_mock.py  test_pubsub.py  test_routes_devices.py  test_routes_health.py  test_routes_summary.py  test_schemas.py  test_stream.py
gju-library-ai/backend/: Dockerfile  alembic.ini  pyproject.toml
gju-library-ai/backend/alembic/: env.py
gju-library-ai/backend/alembic/versions/: 0001_extensions.py  0002_subscription_databases.py  0003_passages.py  0004_users_sessions.py  0005_logs.py
gju-library-ai/backend/app/: config.py  deps.py  main.py
gju-library-ai/backend/app/auth/: admin.py  ids.py  jwt.py  stub.py
gju-library-ai/backend/app/chat/: pipeline.py  render.py
gju-library-ai/backend/app/llm/: gemini_client.py  interface.py  ollama_client.py  prompts.py
gju-library-ai/backend/app/models/: click_event.py  feedback_event.py  passage.py  query_log.py  user.py  (+2 more)
gju-library-ai/backend/ingest/: databases_loader.py  docx_loader.py  facts_loader.py  run.py  titles_loader.py
gju-library-ai/backend/tests/: conftest.py
(+209 files in other folders)
