[project]
name = "gju-library-ai"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  "email-validator>=2.2",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3.6",
  "python-jose[cryptography]>=3.3",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "ollama>=0.4",
  "tenacity>=9.0",
]

[project.optional-dependencies]
ml = [
  "FlagEmbedding>=1.3",
  "sentence-transformers>=3.3",
  "torch>=2.5",
]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.setuptools]
packages = ["app", "ingest"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = ["slow: heavy tests requiring model downloads"]

[tool.ruff]
line-length = 100
target-version = "py312"
