[project]
name = "hydroloop-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "asyncpg>=0.29",
  "aiomqtt>=2.3",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sse-starlette>=2.1",
  "slowapi>=0.1.9",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingest*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
